# couperose

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.frontend  Dockerfile.messenger  Makefile  README.adoc  README.md
.github/workflows/: build-and-push.yml  deploy.yml
akagi/: Cargo.toml
akagi/src/: main.rs  methods.rs
akagi/src/application/: use_cases.rs
ansible/: ansible.cfg  inventory.ini  playbook.yml
ansible/group_vars/all/: vars.yml
ansible/inventory/: hosts.yml
ansible/playbooks/: deploy_envoy.yml
ansible/templates/: envoy.yml.j2
ansible/vars/: main.yml
api/: Cargo.toml  build.rs
api/proto/: messenger.proto
api/src/: grpc_client.rs  main.rs  methods.rs  models.rs
api/src/methods/: get.rs  helpers.rs  send.rs
docker/: Dockerfile.akagi  Dockerfile.api  Dockerfile.frontend  Dockerfile.hiryu  Dockerfile.kaga  Dockerfile.messenger  docker-compose.yml  start-nginx.sh
gateway/: Cargo.toml  build.rs
gateway/proto/: gateway.proto
gateway/src/: client.rs  main.rs
hiryu/: package-lock.json  package.json  rollup.config.js
hiryu/public/: app.js  global.css  index.html
hiryu/src/: App.svelte  api.js
hiryu/src/components/: Chat.svelte  Message.svelte
kaga/: Cargo.toml  build.rs
kaga/src/: grpc_client.rs  main.rs  methods.rs
kaga/src/methods/: get.rs  send.rs  ws.rs
messenger/: Cargo.toml  build.rs
messenger/src/: main.rs  methods.rs
prometheus/: prometheus.yml
soryu/: nginx.conf
soryu/site-enabled/: grafana.conf  mail.conf  messenger.conf  tempestmon.conf
soryu/static/tempestmon/: index.html
svelte-messenger/: package-lock.json  package.json  rollup.config.js
svelte-messenger/src/: api.js
(+10 files in other folders)
