[package]
name = "akagi"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.8", features = ["postgres"] }
prost = "0.13.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tonic = { version = "0.12.3", features = ["codegen"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"


[build-dependencies]
tonic-build = "0.12.3"
