[package]
name = "akagi"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.4"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1.42.0", features = ["full"] }
tonic = { version = "0.12.3", features = ["codegen"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"


[build-dependencies]
tonic-build = "0.12.3"
