[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
prost = "0.13.4"
serde = { version = "1.0.216", features = ["derive"] }
tokio = "1.42.0"
tonic = "0.12.3"
utoipa = "5.2.0"
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }

[build-dependencies]
tonic-build = "0.12.3"
